# learnopengl

./: CMakeLists.txt
include/: camera.h  filesystem.h  stb_image.h
include/glad/: glad.h
lib/: glfw-3.3.8
shaders/: basicFragmentShader.fsh  cubes.fsh  cubes.fx  cubes.vsh  cubes.vx  fragmentShader.fsh  fragmentShader.shader  geometry.gsh  light.fsh  light.fx  light.vx  normalGeometry.gsh  normalVertex.vsh  sceneShader.fsh  sceneShader.vsh  screenShader.fsh  screenShader.vsh  shaderBlue.fsh  shaderGreen.fsh  shaderRed.fsh  shaderSingleColor.fsh  shaderYellow.fsh  skyboxShader.vsh  vertexShader.shader  vertexShader.vsh
src/: depth_testing.cpp  glad.c  helpers.h  main.cpp  model.cpp  model.h  shader.cpp  shader.h
